<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Dibuat Oleh Arief Izhharuddin pada 9/17/17 5:10 AM
  ~ Copyright (c) 2017. All rights reserved
  ~
  ~ Terakhir dimodifikasi 9/17/17 5:10 AM
  ~ username IzhharuddinArief
  -->

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/global_bg_front"
    app:cardCornerRadius="2sp"
    app:cardElevation="2sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:fontFamily="sans-serif-light"
            android:textSize="18sp"
            android:textAlignment="center"/>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bbbb"/>

        <TextView
            android:id="@+id/tv_jarak_waktu"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lokasi"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_centerHorizontal="true" />

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rg_modes"
            android:layout_below="@+id/tv_jarak_waktu"
            class="com.google.android.gms.maps.SupportMapFragment"
            tools:ignore="ObsoleteLayoutParam" />

        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/rg_modes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:visibility="gone"
                android:id="@+id/rb_driving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/mengemudi" />

            <RadioButton
                android:visibility="gone"
                android:id="@+id/rb_bicycling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bersepeda" />

            <RadioButton
                android:visibility="gone"
                android:id="@+id/rb_walking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jalan" />
        </RadioGroup>

    </LinearLayout>
</android.support.v7.widget.CardView>
