<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Dibuat Oleh Arief Izhharuddin pada 9/19/17 12:46 AM
  ~ Copyright (c) 2017. All rights reserved
  ~
  ~ Terakhir dimodifikasi 9/19/17 12:41 AM
  ~ username IzhharuddinArief
  -->

<android.support.v4.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/aboutIcon"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/aboutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/app_name"/>

        <View
            android:id="@+id/aboutDivider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/cardview_shadow_start_color"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/aboutDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="14sp"
            android:textStyle="normal"
            android:lineSpacingExtra="2dp"
            android:text="@string/penggunaan"/>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:layoutDirection="ltr">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.24"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxLines="1"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:text="OBYEK WISATA" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/cardview_shadow_start_color"
                    android:layout_marginTop="4dp" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="20"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/menu_obyek_wisata"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:layoutDirection="ltr">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.24"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxLines="1"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:text="RUTE WISATA" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/cardview_shadow_start_color"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="20"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:lineSpacingExtra="4sp"
                    android:text="Untuk dapat menampilkan rute wisata dari posisi pengguna ke lokasi wisata tap (klik) pada peta dan pastikan terkoneksi internet serta mengaktifkan GPS" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:layoutDirection="ltr">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:id="@+id/libraryName1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.10"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxLines="1"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:text="@string/peta_wisata" />

                </LinearLayout>

                <View
                    android:id="@+id/libraryDescriptionDivider1"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/cardview_shadow_start_color"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/libraryDescription1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="20"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/menu_peta_lokasi_wisata"
                    tools:targetApi="o" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:layoutDirection="ltr">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:id="@+id/libraryName3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.89"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxLines="1"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:text="@string/bantuan" />

                </LinearLayout>

                <View
                    android:id="@+id/libraryDescriptionDivider3"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/cardview_shadow_start_color"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/libraryDescription3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="20"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/menu_bantuan" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:layoutDirection="ltr">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:id="@+id/libraryName4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxLines="1"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:text="@string/tentang" />

                </LinearLayout>

                <View
                    android:id="@+id/libraryDescriptionDivider4"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/cardview_shadow_start_color"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/libraryDescription4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="20"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:text="@string/menu_tentang" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>